hphp/hack/test/typecheck/encapsed4.php.exp
File "encapsed4.php", line 7, characters 15-15:
Expected } (Parsing[1002])
